--- a/css/global.scss
+++ b/css/global.scss
@@ -27,11 +27,12 @@ $space2: ($space1 * 2);
 $space3: ($space1 * 3);
 $space4: ($space1 * 4);
 $space5: ($space1 * 8);
+// Fonts
+$teko: 'Teko', sans-serif;
+$roboto: 'Roboto', sans-serif;
 @media (max-width:992px) {
     p.display-5 {
         font-size: 3.6em !important;
     }
-    // .container {
-    //     padding: $space3 !important;
-    // }
 }
+
