--- a/css/slider.css
+++ b/css/slider.css
@@ -27,6 +27,12 @@ a {
   }
 }
 
+.lorem .row .col {
+  padding: 10px;
+  margin: 20px;
+  background-color: #F5493D;
+}
+
 .slider .col {
   width: 100%;
   margin: 64px;
@@ -84,6 +90,8 @@ a {
 
 .buttons div {
   margin: 20px;
+  -webkit-transition: all .2s ease;
+  transition: all .2s ease;
 }
 
 .buttons div:hover {
